# Alpha2MQTT

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  README.md  TESTING.md  changes.md
.github/workflows/: arduino-build.yml  tests.yml
Alpha2MQTT/: Alpha2MQTT.ino  Definitions.h  README.txt  RS485Handler.h  RegisterHandler.h  build.sh  platformio.ini
Alpha2MQTT/include/: BootEvent.h  BootModes.h  BucketScheduler.h  ConfigCodec.h  DebugLog.h  Definitions.h  DiscoveryModel.h  DispatchRequest.h  DispatchTiming.h  MemoryHealth.h  ModbusCodec.h  MqttEntities.h  MqttEntityCatalogRows.h  PollingConfig.h  PortalConfig.h  PowerSnapshot.h  RS485Handler.h  RS485HandlerStub.h  RawReadRequest.h  RebootRequest.h  RegisterHandler.h  Rs485BaudSync.h  Rs485ProbeLogic.h  Rs485RuntimeReconnect.h  Rs485StubLogic.h  Scheduler.h  SchedulerReadPolicy.h  StatusLedPolicy.h  StatusReporting.h  TimeProvider.h  WifiGuard.h  WifiRecoveryPolicy.h  diag.h
Alpha2MQTT/src/: BootEvent.cpp  BootModes.cpp  BucketScheduler.cpp  ConfigCodec.cpp  DiscoveryModel.cpp  DispatchRequest.cpp  DispatchTiming.cpp  MemoryHealth.cpp  ModbusCodec.cpp  MqttEntities.cpp  PollingConfig.cpp  PortalConfig.cpp  RS485Handler.cpp  RawReadRequest.cpp  RebootRequest.cpp  Scheduler.cpp  (+8 more)
AlphaSniffer/: AlphaSniffer.ino  README.txt  RS485Handler.cpp  RS485Handler.h  RegisterHandler.cpp
Dave_Examples/: Dave_ESS_Automation.yaml.txt  Dave_ESS_Dashboard.yaml.txt
ci/: gh-bootstrap.sh
scripts/: Dockerfile.clibuild  Dockerfile.test  e2e.sh  e2e_captive_portal.sh  test_host.sh  test_host_docker.sh
tests/: test_boot_event.cpp  test_boot_modes.cpp  test_bucket_scheduler.cpp  test_config_codec.cpp  test_crc.cpp  test_discovery_model.cpp  test_dispatch_request.cpp  test_dispatch_timing.cpp  test_frames.cpp  test_main.cpp  test_memory_health.cpp  test_mqtt_entities.cpp  test_polling_config.cpp  test_portal_config.cpp  test_power_snapshot.cpp  test_raw_read_request.cpp  test_reboot_request.cpp  test_rs485_baud_sync.cpp  test_rs485_probe_logic.cpp  test_rs485_runtime_reconnect.cpp  test_rs485_stub_logic.cpp  test_scheduler.cpp  test_scheduler_read_policy.cpp  test_status_led_policy.cpp  test_status_reporting.cpp  test_wifi_guard.cpp  test_wifi_recovery_policy.cpp
tools/: mqtt_check.py
(+11 files in other folders)
